# apod-manager

./: .gitignore  pyproject.toml
src/apod_manager/: __init__.py  __main__.py  apod.py  errors.py  manager.py  set_background.py
src/apod_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
